--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/next-auth": "^3.15.0",
     "next": "12",
+    "next-auth": "^4.3.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
+    "sass": "^1.50.0",
+    "stripe": "^8.217.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
-    "@types/react-native": "^0.67.4",
+    "@types/react": "18.0.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "typescript": "^4.6.3"
