--- a/package.json
+++ b/package.json
@@ -6,10 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.1",
+    "@prismicio/helpers": "^2.3.0",
+    "@prismicio/react": "^2.3.0",
+    "@prismicio/slice-simulator-react": "^0.2.2",
+    "@prismicio/types-internal": "0.2.11",
+    "@stripe/stripe-js": "^1.27.0",
     "@types/next-auth": "^3.15.0",
+    "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
+    "faunadb": "^4.5.4",
     "next": "12",
     "next-auth": "^4.3.2",
     "react": "^18.0.0",
@@ -23,6 +33,7 @@
     "@types/react": "18.0.1",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
+    "slice-machine-ui": "^0.3.7",
     "typescript": "^4.6.3"
   }
 }
