--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@prismicio/types-internal": "0.2.11",
     "@stripe/stripe-js": "^1.27.0",
     "@types/next-auth": "^3.15.0",
+    "@types/prismic-dom": "^2.1.1",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "faunadb": "^4.5.4",
     "next": "12",
     "next-auth": "^4.3.2",
+    "prismic-dom": "^2.2.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
